# aseprite-mcp

./: README.md  pyproject.toml
aseprite_mcp/core/: colors.py  lua.py  native.py
aseprite_mcp/tools/: __init__.py  animation.py  canvas.py  chimera_qa.py  drawing.py  export.py  fx.py  layers.py  native_fx.py  palette.py  pixel_read.py  quality.py  scene.py  selection.py  slices.py  tilemap.py  transform.py
scripts/: mcp_drive.py
tests/: test_chimera_qa.py  test_composite_read.py  test_create_into_group.py  test_drawing_fixes.py  test_error_propagation.py  test_group_layers.py  test_native_fx.py  test_t3_fixes.py
