[project]
name = "aseprite-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]

[project.optional-dependencies]
chimera = [
    "numpy>=2.4.6",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
